BE - Location Manager: Remove location creation when nodes/minion are added to the inventory
This commit makes the following changes to the codebase:

- Throws LocationNotFoundException instead of creating a Location when nodes are added.
- Updates minion's configuration when a heartbeat adds a new minion to the inventory.
- Updates tests to reflect the new behavior.
- Fixes Sonar issues:
-- Removes an unused parameter in the method validInput.
-- Replaces a message string with an existing constant.
-- Simplifies an if condition.
-- Uses Map.Entry to loop.
-- Uses toList instead of collector.
-- Uses isEmpty for some asserts.
-- Removes "public" from test methods and classes.

HS-1519