@@ -1,13 +1,11 @@
 package org.opennms.horizon.inventory.service;
 
-import java.time.LocalDateTime;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.opennms.cloud.grpc.minion.Identity;
 import org.opennms.horizon.grpc.heartbeat.contract.HeartbeatMessage;
 import org.opennms.horizon.inventory.dto.MonitoringSystemDTO;
+import org.opennms.horizon.inventory.exception.LocationNotFoundException;
 import org.opennms.horizon.inventory.mapper.MonitoringSystemMapper;
 import org.opennms.horizon.inventory.model.MonitoringLocation;
 import org.opennms.horizon.inventory.model.MonitoringSystem;
@@ -16,8 +14,9 @@ import org.opennms.horizon.inventory.repository.MonitoringSystemRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
+import java.time.LocalDateTime;
+import java.util.List;
+import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
@@ -33,30 +32,26 @@ public class MonitoringSystemService {
         return all
             .stream()
             .map(mapper::modelToDTO)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public Optional<MonitoringSystemDTO> findBySystemId(String systemId, String tenantId) {
         return systemRepository.findBySystemIdAndTenantId(systemId, tenantId).map(mapper::modelToDTO);
     }
 
-    public void addMonitoringSystemFromHeartbeat(HeartbeatMessage message, String tenantId) {
+    public void addMonitoringSystemFromHeartbeat(HeartbeatMessage message, String tenantId) throws LocationNotFoundException {
         Identity identity = message.getIdentity();
+        MonitoringSystem monitoringSystem;
         Optional<MonitoringSystem> msOp = systemRepository.findBySystemIdAndTenantId(identity.getSystemId(), tenantId);
-        if(msOp.isEmpty()) {
+        if (msOp.isEmpty()) {
             Optional<MonitoringLocation> locationOp = locationRepository.findByLocationAndTenantId(identity.getLocation(), tenantId);
-            MonitoringLocation location = new MonitoringLocation();
-            if(locationOp.isPresent()) {
+            MonitoringLocation location;
+            if (locationOp.isPresent()) {
                 location = locationOp.get();
             } else {
-                location.setLocation(identity.getLocation());
-                location.setTenantId(tenantId);
-                var newLocation = locationRepository.save(location);
-                // Send config updates asynchronously to Minion
-                configUpdateService.sendConfigUpdate(newLocation.getTenantId(), newLocation.getLocation());
-
+                throw new LocationNotFoundException("Location not found " + identity.getLocation());
             }
-            MonitoringSystem monitoringSystem = new MonitoringSystem();
+            monitoringSystem = new MonitoringSystem();
             monitoringSystem.setSystemId(identity.getSystemId());
             monitoringSystem.setMonitoringLocation(location);
             monitoringSystem.setTenantId(tenantId);
@@ -65,10 +60,13 @@ public class MonitoringSystemService {
             monitoringSystem.setMonitoringLocationId(location.getId());
             systemRepository.save(monitoringSystem);
         } else {
-            MonitoringSystem monitoringSystem = msOp.get();
+            monitoringSystem = msOp.get();
             monitoringSystem.setLastCheckedIn(LocalDateTime.now());
             systemRepository.save(monitoringSystem);
         }
+
+        // Asynchronously send config updates to Minion
+        configUpdateService.sendConfigUpdate(tenantId, monitoringSystem.getMonitoringLocation().getLocation());
     }
 
     @Transactional
@@ -81,7 +79,7 @@ public class MonitoringSystemService {
             var tenantId = monitoringSystem.getTenantId();
             systemRepository.deleteById(id);
             var retrieved = systemRepository.findByMonitoringLocationIdAndTenantId(optionalMS.get().getMonitoringLocationId(), tenantId);
-            if (retrieved.size() == 0) {
+            if (retrieved.isEmpty()) {
                 locationRepository.delete(monitoringSystem.getMonitoringLocation());
                 configUpdateService.removeConfigsFromTaskSet(tenantId, location);
             }
